// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should allow nesting children inside 1`] = `
<ForwardRef(LinkWithRef)
  className=" paypal-donate"
  href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=1234&currency_code=EUR&source=url"
  rel="noreferrer noopener"
  target="_blank"
>
  <div>
    Extra content
  </div>
  <span>
    Label
  </span>
</ForwardRef(LinkWithRef)>
`;

exports[`Link should allow to set a custom amount 1`] = `
<ForwardRef(LinkWithRef)
  className=" paypal-donate"
  href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=1234&currency_code=EUR&amount=10.15&source=url"
  rel="noreferrer noopener"
  target="_blank"
>
  label
</ForwardRef(LinkWithRef)>
`;

exports[`Link should allow to set a custom class to the component 1`] = `
<ForwardRef(LinkWithRef)
  className=" paypal-donate"
  href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=1234&currency_code=EUR&source=url"
  rel="noreferrer noopener"
  target="_blank"
>
  label
</ForwardRef(LinkWithRef)>
`;

exports[`Link should render a react-router-dom Link with target _blank 1`] = `
<ForwardRef(LinkWithRef)
  className=" paypal-donate"
  href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=1234&currency_code=EUR&source=url"
  rel="noreferrer noopener"
  target="_blank"
>
  label
</ForwardRef(LinkWithRef)>
`;
